examples/test/testpolicy17307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17307
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key38: value18
      key33: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value10
          key3: value44
          key41: value16
      podSelector:
        matchLabels:
          key12: value44
          key24: value36
          key6: value45
